grafana/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana:5.4.3 
        imagePullPolicy: Always
        securityContext:
          runAsUser: 471
        image: grafana/grafana
        ports:
        - name: web
          containerPort: 3000
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 600Mi
            cpu: 200m
