grafana/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.kneusa
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
  tls:
    - hosts:
      - grafana.kneusa
